data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2001.wast
;; 2. **Test Description**:    - **Scenario**: An exported function contains a `br_if` inside a `loop` structure that should jump back to the start of the loop when called from another module.    - **Constraint**: Verify that loop parameters are correctly handled when the `br_if` is executed, ensuring proper stack adjustments.    - **Differential Focus**: Assess if explicit handling of loop parameters in `wizard_engine` matches the implicit behavior in the WASM implementation.

(assert_invalid
  (module
    (func (export "test_br_if_loop") (param i32) (result i32)
      (local i32)
      (loop (param i32 i32) (result i32)
        (local.get 0)
        (i32.const 1)
        (i32.sub)
        (local.tee 1)
        (i32.const 0)
        (i32.ne)
        (br_if 0 (local.get 1))
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)